syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.github.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package sample;

service Sample {
  rpc SayHello (SampleRequest) returns (SampleReply) {}
}

message SampleRequest {
  string name = 1;
}

message SampleReply {
  string message = 1;
}